Change fan settings

--- a/_printers/01. Dual Material Mode (Easy Support Material or Multi Color).ini
+++ b/_printers/01. Dual Material Mode (Easy Support Material or Multi Color).ini
@@ -21,8 +21,8 @@ num_extruders=2
 firmware_type=2
 add_comments=1
 g4p_uses_seconds=0
-fan_on=M106
-fan_off=M107
+fan_on=
+fan_off=
 fan_pwm=0
 add_m101_g10=0
 z_speed_mm_per_s=15
@@ -89,12 +89,12 @@ nozzle_dia_4=0.4
 nozzle_len_4=0.6
 drive_len_4=0
 model_ext=0
-support_ext=0
-support_body_ext=0
-raft_ext=0
+support_ext=1
+support_body_ext=1
+raft_ext=1
 ext_order_optimize=1
 solid_loop_overlap_fraction=0.25
 min_seg_len_mm=0
 z_step_mm=0
 max_nodes_per_s=0
-profile_date=2019-08-19 16:00:16
+profile_date=2020-12-14 21:36:44
