--- a/_printers/02. Copy Mode (Each head prints a copy of the part).ini
+++ b/_printers/02. Copy Mode (Each head prints a copy of the part).ini
@@ -1,7 +1,7 @@
 
 [02. Copy Mode (Each head prints a copy of the part)]
 bed_STL_filename=
-MRU_style=02. Coarse, Medium Density
+MRU_style=01 Coarse, Solid
 MRU_support=00. No Support or Pillar
 MRU_material=01) PLA
 extension=gcode
@@ -21,8 +21,8 @@ num_extruders=1
 firmware_type=2
 add_comments=1
 g4p_uses_seconds=0
-fan_on=M106
-fan_off=M107
+fan_on=
+fan_off=
 fan_pwm=0
 add_m101_g10=0
 z_speed_mm_per_s=15
@@ -97,4 +97,4 @@ solid_loop_overlap_fraction=0.25
 min_seg_len_mm=0
 z_step_mm=0
 max_nodes_per_s=0
-profile_date=2020-11-16 14:01:38
+profile_date=2020-12-14 21:35:36
