--- a/_printers/FM1.ini
+++ b/_printers/FM1.ini
@@ -21,8 +21,8 @@ num_extruders=1
 firmware_type=2
 add_comments=1
 g4p_uses_seconds=0
-fan_on=M106
-fan_off=M107
+fan_on=
+fan_off=
 fan_pwm=0
 add_m101_g10=0
 z_speed_mm_per_s=15
